# csv-summarizer

./: Dockerfile  README.md  pyproject.toml
src/: app.py  modeling.py  plotting.py  processing.py  stats.py
tests/: test_modeling.py  test_plotting.py  test_processing.py  test_stats.py
