[project]
name = "csv-summarizer"
version = "0.1.0"
description = "A Shiny for Python app for CSV summarization and visualization"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "shiny>=0.6.0",
    "pandas>=2.0.0",
    "numpy>=1.20.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.2.0",
    "faicons",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
